feat: add news-sitemap.xml
